# agents-system

./: .gitignore  ARCHITECTURE_REFACTOR_PLAN.md  ARCHITECTURE_REFACTOR_PROPOSAL.md  CLAUDE.md  CLEAN_ARCHITECTURE_V2.md  COST-ANALYSIS-REALISTIC.md  CRITICAL_GAP_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  README.md  mobile_ux_audit_report.md
agent-bot/: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_DUAL_PURPOSE_MCP.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_MCP.md  BEFORE_AFTER.md  CLAUDE.md  DEPLOYMENT.md  FEATURE_PARITY.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-STATUS.md  IMPLEMENTATION-TASKS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MCP_ARCHITECTURE_SUMMARY.md  Makefile  PHASE1-COMPLETE.md  PHASE2-COMPLETE.md  PHASE_4_5_6_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICK_TEST_REFERENCE.md  README.md  README_MONOREPO.md  REFACTOR_COMPLETE.md  TEST_EXECUTION_SUMMARY.md  TEST_VALIDATION.md  VERIFICATION_REPORT.md  docker-compose.cli.yml  docker-compose.complete.yml  docker-compose.knowledge.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt
agent-bot/.claude/: claude.md
agent-bot/agent-container/: Dockerfile  container.py  docker-compose.agent.yml  main.py  pyproject.toml  requirements.txt
agent-bot/agent-engine/: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.agent.yml  main.py  mcp.json
agent-bot/agent-engine-package/: CLAUDE.md  README.md  pyproject.toml
agent-bot/api/: health.py
agent-bot/api-gateway/: CLAUDE.md  Dockerfile  README.md  claude.md  main.py  observability.py  pyproject.toml  requirements.txt
agent-bot/api-services/: CLAUDE.md
agent-bot/core/: config.py
agent-bot/dashboard-api/: README.md  main.py
agent-bot/dashboard-api-container/: Dockerfile  claude.md  main.py  pyproject.toml
agent-bot/docs/: ARCHITECTURE-REVIEW-REPORT.md  ARCHITECTURE-VISUAL-SUMMARY.md  ARCHITECTURE.md  ARCHIVED-agent-engine-package.md  AUTONOMOUS-SELF-HEALING-PLAN.md  BUSINESS-LOGIC-TESTING.md  KNOWLEDGE-SYSTEM-ARCHITECTURE.md  OAUTH-INTEGRATION-GUIDE.md  SETUP.md  TESTING.md  agent-bot-diagrams.mermaid
agent-bot/external-dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
agent-bot/github-mcp-server/: Dockerfile  server.py
agent-bot/github-service/: main.py
agent-bot/gkg-service/: gkg_wrapper.py  main.py
agent-bot/indexer-worker/: config.py  worker.py
agent-bot/internal-dashboard-api/: .env.example  CLAUDE.md  Dockerfile  requirements.txt
agent-bot/jira-mcp-server/: server.py  server_dual.py
agent-bot/jira-service/: main.py
agent-bot/knowledge-graph/: Cargo.toml  Dockerfile  INTEGRATION-PLAN.md
agent-bot/llamaindex-service/: chroma_client.py  main.py  query_engine.py
agent-bot/mcp-servers/: CLAUDE.md  docker-compose.mcp.yml
agent-bot/oauth-service/: .env.example  README.md  models.py  start-ngrok.sh
agent-bot/scripts/: docker-service.sh  oauth-setup.sh  run-tests.sh  test-cli.sh  validate_deployment.sh  verify-phase1.sh
agent-bot/sentry-mcp-server/: server.py
agent-bot/sentry-service/: Dockerfile  pyproject.toml
agent-bot/shared/: __init__.py  models.py
agent-bot/slack-mcp-server/: requirements.txt  server.py
agent-bot/slack-service/: requirements.txt
agent-bot/task-logger/: README.md  logger.py  main.py  models.py  worker.py
agent-bot/tests/: __init__.py  conftest.py  test_factories.py
claude-code-agent/: .credentials.json  .env.example  .gitignore  CODE_REVIEW_ANALYSIS.md  COMPLETION-SUMMARY.md  CONTAINER_RESEARCH_REPORT.md  CRITICAL-CODE-REVIEW.md  DASHBOARD-IMPLEMENTATION-SUMMARY.md  DASHBOARD-UI-IMPROVEMENTS.md  DEAD-CODE-ANALYSIS.md  DEPLOYMENT-SUMMARY.md  DOCKER-PERSISTENCE-GUIDE.md  Dockerfile  FINAL-TEST-SUMMARY.md  IMPLEMENTATION-STATUS.md  IMPLEMENTATION_SUMMARY.md  LOGGING_USAGE_EXAMPLES.md  Makefile  PLAN-KAN-19.md  PLAN.md  QUICKSTART.md  README.md  REFACTORING_PROGRESS.md  STRUCTURED_LOGGING_IMPLEMENTATION.md  TEST-COVERAGE-ANALYSIS.md  TEST-STATUS-FINAL.md  TEST_OVERVIEW.md  WEBHOOK-IMPLEMENTATION-COMPLETE.md  WEBHOOK-IMPLEMENTATION-SUMMARY.md  WEBHOOK-SETUP-GUIDE.md  analysis.md  claude.md  debug_db.py  docker-compose.yml  inturctions.txt  main.py  migrate_conversations.py  pyproject.toml  review.md  todo.txt  (+3 more)
claude-code-agent/.claude/: CLAUDE.md  settings.local.json
claude-code-agent/api/: __init__.py  accounts.py  analytics.py  container.py  conversations.py  credentials.py  dashboard.py  registry.py  sessions.py  subagents.py  webhook_status.py  webhook_templates.py  webhooks.py  webhooks_dynamic.py  webhooks_management.py  websocket.py
claude-code-agent/config/: commands.yaml
claude-code-agent/core/: __init__.py  background_manager.py  claude_tasks_sync.py  cli_access.py  cli_runner.py  command_matcher.py  config.py  exceptions.py  github_client.py  jira_client.py  logging_config.py  oauth_usage.py  registry.py  response_poster.py  routing_metadata.py  sentry_client.py  slack_client.py  storage_backend.py  subagent_config.py  task_logger.py  type_coercion.py  webhook_config_loader.py  webhook_configs.py  webhook_engine.py  webhook_utils.py  webhook_validation.py  websocket_hub.py  workflow_orchestrator.py
claude-code-agent/docs/: ARCHITECTURE_MERMAID.md  ARCHITECTURE_PROPOSED_MERMAID.md  BUSINESS-REQUIREMENTS.md  CLOUD-DEPLOYMENT-GUIDE.md  CONVERSATION-MANAGEMENT.md  (+29 more)
claude-code-cli/: .gitignore  BUSINESS-LOGIC.md  CLAUDE-CODE-CLI.ARCHITECTURE.md  CLAUDE.md  Makefile  PLUGIN_ARCHITECTURE.md  README.md  REFACTORING-PLAN.md  REFACTORING_SUMMARY.md  STREAMING_LOGS.md  pyproject.toml
claude-code-cli-poc/: .env.example  CLAUDE-CODE-CLI-POC.ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
multiple-agents-system/: .env.example  MULTIPLE-AGENTS-SYSTEM.ARCHITECTURE.md  README.md  cli.py  local_runner.py  pyproject.toml  requirements.txt  webhook_server.py
single-agent-system/: .env.example  README.md  SINGLE-AEGNT-SYSTEM.ARCHITECTURE.md  cli.py  pyproject.toml  webhook_server.py
unified-cli-agent/: pyproject.toml
(+1135 files in other folders)
