[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "webhook_server", "planning_agent", "executor_agent"]

[project]
name = "claude-code-cli-poc"
version = "0.1.0"
description = "POC for Claude Code CLI with two agents - Planning/Discovery and Executor"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "PyGithub>=2.1.0",
    "jira>=3.8.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
webhook-server = "webhook_server.main:main"
planning-agent = "planning_agent.run:main"
executor-agent = "executor_agent.run:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
