[project]
name = "claude-code-cli"
version = "1.0.0"
description = "Production-ready AI Agent System powered by Claude Code CLI"
authors = [{name = "AI Team"}]
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "slack-sdk>=3.26.2",
    "PyGithub>=2.1.1",
    "prometheus-client>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiohttp>=3.9.1",
    "python-dateutil>=2.8.2",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "services", "agents"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
