[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "agents", "services", "mcp"]

[project]
name = "single-agent-system"
version = "0.1.0"
description = "Lean single-agent system for local development workflow automation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # AWS Bedrock
    "boto3>=1.34.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-aws>=0.1.0",
    # Core
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    # Webhook server
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
agent = "cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
