[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-container"
version = "0.1.0"
description = "Agent execution container with repo management and knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=23.0",
    "httpx>=0.24",
    "asyncpg>=0.28",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ports*", "workers*", "adapters*"]

[tool.mypy]
strict = true
python_version = "3.11"
