[project]
name = "token-service"
version = "0.1.0"
description = "Multi-organization token management service"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
